schema/testdata/validation_update_operation_unique_lookup_in_wheres/schema.keel
model MyModel {
    fields {
        nonUnique Text
        code Text @unique
    }

    operations {
        update updateMyModel() {
            @where(myModel.nonUnique == "something")
            @where(myModel.code == "sdsd")
        }
    }
}