schema/testdata/errors/update_operation_no_unique_lookup_in_wheres.keel
model MyModel {
    fields {
        nonUnique Text
    }

    actions {
        //expect-error:16:29:ActionInputError:The action 'updateMyModel' can only update a single record and therefore must be filtered by unique fields
        update updateMyModel() {
            @where(myModel.nonUnique == "something")
        }
    }
}
